--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,4 +7,5 @@
     <div id="item-1">
         <div id="map" style="height: 600px;"></div>
     </div>
+    <script type="module" src="{{ url_for('static', filename='js/map.js') }}"></script>
 {% endblock %}
