style: Adding a style

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=SUSE:wght@100..800&display=swap');
+
 *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
@@ -5,29 +7,135 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: SUSE, Noto Sans, Arial, sans-serif;
     background-color: #f8f9fa;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
+header {
+    background-color: #006494;
+}
+
 header, footer {
-    background-color: #333;
     color: white;
     text-align: center;
     padding: 1em 0;
+}
+
+footer {
+    background-color: #171717;
 }
 
 main {
     flex: 1;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     text-align: center;
 }
 
 .content img, .content h2, .content p {
     padding-bottom: 20px;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    gap: 90px;
+    align-items: center;
+    padding: 20px;
+}
+
+#map {
+    width: 100%;
+    height: 600px;
+}
+
+.angry-grid {
+    display: grid; 
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 0px;
+    height: 100%;
+}
+
+#item-0 {
+    background-color: #343232; 
+    grid-row-start: 1;
+    grid-column-start: 5;
+    grid-row-end: 4;
+    grid-column-end: 6;
+    padding: 10px;
+}
+
+#item-0 h3 {
+    color: #333;
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+#item-0 ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+#item-0 ul li {
+    padding: 8px;
+    margin-bottom: 8px;
+    background-color: #e9ecef;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1em;
+}
+
+#item-0 ul li:hover {
+    background-color: #c0c3c7;
+    cursor: pointer;
+}
+
+#item-0 ul li.selected {
+    background-color: #006494;
+    color: white;
+    font-weight: bold;
+    border-color: #004970;
+}
+
+#item-0 ul li.selected h4 {
+    color: white;
+}
+
+#item-0 ul li.selected:hover {
+    background-color: #00587a;
+}
+
+h4 {
+    color: #aa0e0b;
+    font-size: 1em;
+    font-weight: 500;
+}
+
+#item-1 {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 4;
+    grid-column-end: 5;
+}
+
+.leaflet-touch .leaflet-bar a {
+    background-color: #aa0e0b;
+}
+
+.leaflet-touch .leaflet-bar a span {
+    color: white;
+}
+
+.leaflet-touch .leaflet-bar a:hover {
+    background-color: #f07876;
+}
+
+.leaflet-bar {
+    background-color: #006494;
 }
