--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -68,13 +68,13 @@ main {
     grid-column-start: 5;
     grid-row-end: 4;
     grid-column-end: 6;
-    padding: 10px;
+    padding: 15px;
 }
 
 #item-0 h3 {
-    color: #333;
+    color: #e4e3e3;
     font-size: 1.5em;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 #item-0 ul {
