--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,10 +2,12 @@
 
 {% block content %}
     <div id="item-0">
-        <div>
-            <h3>Tempêtes actives</h3>
+        <div class="card">
+            <div class="title">
+                <h3>Tempêtes actives</h3>
+            </div>
+            <div id="active-storms"></div>
         </div>
-        <div id="active-storms"></div>
     </div>
     <div id="item-1">
         <div id="map" style="height: 600px;"></div>
