--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,15 +15,16 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur "Traqueur de Tempêtes" !</h1>
-        <img src="{{ url_for('static', filename='images/hurricane.png') }}" alt="Hurricane Logo" width="100">
+        <h1>Bienvenue sur "Traqueur de Tempêtes" !</h1><br>
+        <img src="{{ url_for('static', filename='images/hurricane.png') }}" alt="Hurricane Logo" width="100"><br>
         <p>Informez-vous sur les tempêtes actuellement actifs dans le monde.</p>
     </header>
     <div class="angry-grid">
         {% block content %}{% endblock %}
     </div>
     <footer>
-        <p>&copy; {{ year }} | Traqueur de Tempêtes. Tous droits réservés.</p>
+        <p>&copy; {{ year }} | Traqueur de Tempêtes.</p><br>
+        <p>Tous droits réservés.</p>
     </footer>
 </body>
 </html>
