--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,170 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=SUSE:wght@100..800&display=swap');
-
-*, *::before, *::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: SUSE, Noto Sans, Arial, sans-serif;
-    background-color: #f8f9fa;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background: rgb(3,15,132);
-    background: -moz-linear-gradient(180deg, rgba(3,15,132,1) 0%, rgba(0,166,255,1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(3,15,132,1) 0%, rgba(0,166,255,1) 100%);
-    background: linear-gradient(180deg, rgba(3,15,132,1) 0%, rgba(0,166,255,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#030f84",endColorstr="#00a6ff",GradientType=1);
-}
-
-header {
-    background: rgba(255,255,255,0.16);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    border-bottom: 1px solid rgba(255,255,255,0.25);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-header, footer {
-    color: white;
-    text-align: center;
-    padding: 1em 0;
-}
-
-footer {
-    background-color: #012949;
-}
-
-main {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    text-align: center;
-}
-
-.content img, .content h2, .content p {
-    padding-bottom: 20px;
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    gap: 90px;
-    align-items: center;
-    padding: 20px;
-}
-
-#map {
-    width: 100%;
-    height: 600px;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.angry-grid {
-    display: grid; 
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 0px;
-    height: 100%;
-}
-
-.card {
-    background-color: #3881e1;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 15px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-#item-0 {
-    grid-row-start: 1;
-    grid-column-start: 5;
-    grid-row-end: 4;
-    grid-column-end: 6;
-    padding: 15px;
-}
-
-#item-0 h3 {
-    color: #012949;
-    font-size: 1.5em;
-    margin-bottom: 20px;
-}
-
-#item-0 ul {
-    list-style-type: none;
-    padding-left: 0;
-}
-
-#item-0 ul li {
-    padding: 8px;
-    margin-bottom: 8px;
-    background-color: #e9ecef;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 1em;
-    transition: all 0.3s ease-in-out;
-}
-
-#item-0 ul li:hover {
-    background-color: #35A4FB;
-    border-color: #004970;
-    cursor: pointer;
-}
-
-#item-0 ul li.selected {
-    background-color: #035CA3;
-    color: white;
-    font-weight: bold;
-    border-color: #004970;
-}
-
-#item-0 ul li.selected h4 {
-    color: white;
-}
-
-#item-0 ul li.selected:hover {
-    background-color: #035CA3;
-}
-
-h4 {
-    color: #0476D0;
-    font-size: 1em;
-    font-weight: 500;
-}
-
-h4:hover {
-    color: #024376;
-}
-
-#item-1 {
-    grid-row-start: 1;
-    grid-column-start: 1;
-    grid-row-end: 4;
-    grid-column-end: 5;
-    padding: 15px;
-}
-
-.leaflet-touch .leaflet-bar a {
-    background-color: #aa0e0b;
-}
-
-.leaflet-touch .leaflet-bar a span {
-    color: white;
-}
-
-.leaflet-touch .leaflet-bar a:hover {
-    background-color: #f07876;
-}
-
-.leaflet-bar {
-    background-color: #006494;
-}
-
-a.leaflet-popup-close-button:hover {
-    background-color: #f07876;
-}
+@import url("main/main.css");
+@import url("card-storms/card-storms.css");
+@import url("map/map.css");
