--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,8 @@
         {% block content %}{% endblock %}
     </div>
     <footer>
-        <p>&copy; {{ year }} | Traqueur de Tempêtes.</p><br>
+        <p>&copy; {{ year }} | Traqueur de Tempêtes.</p>
+        <p>Données fournies par <a href="https://github.com/tropycal/tropycal" target="_blank">tropycal</a>.</p>
         <p>Tous droits réservés.</p>
     </footer>
 </body>
